<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="10dp"
android:layout_marginBottom="10dp"
        android:id="@+id/item_in_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearColumnorderid1013"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_weight="0.77"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oderId"
                style="@style/txtSFProTextsemibold18_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_order_id_1013"
                tools:text="@string/msg_order_id_1013" />

            <TextView
                android:id="@+id/orderEmail"
                style="@style/txtSFProTextregular16_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_loremipsum_gmai"
                tools:text="@string/msg_loremipsum_gmai" />

            <TextView
                android:id="@+id/txtPrice"
                style="@style/txtSFProTextregular16_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_amount_399_0"
                tools:text="@string/lbl_amount_399_0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearColumndate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.23"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDate"
                style="@style/txtSFProTextregular14_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_01_04_2022"
                tools:text="@string/lbl_01_04_2022" />

            <ImageView
                android:id="@+id/imageArrowright"
                android:layout_width="@dimen/_8pxh"
                android:layout_height="@dimen/_15pxh"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_66pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_1pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_arrowright" />

            <TextView
                android:id="@+id/txtCompleted"
                style="@style/txtSFProTextsemibold14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/lbl_completed"
                tools:text="@string/lbl_completed" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>